reves/target/generated-sources/antlr4/com/backwardslanguage/reves/reves/RevesParserParser.java
// Generated from RevesParser.g4 by ANTLR 4.4
package com.backwardslanguage.reves.reves;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RevesParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, VAR=2, PRINTLN=3, MINUS=4, MULT=5, DIV=6, PLUS=7, EXP=8, AND=9, 
		NOT=10, OR=11, GT=12, LT=13, GEQ=14, LEQ=15, EQ=16, NEQ=17, BRACKET_OPEN=18, 
		BRACKET_CLOSE=19, PAR_OPEN=20, PAR_CLOSE=21, SEMICOLON=22, ASSIGN=23, 
		OPERATION=24, INT_TYPE=25, REAL_TYPE=26, BOOL_TYPE=27, STRING_TYPE=28, 
		BEGIN_RW=29, END_RW=30, IF_RW=31, ELSE_RW=32, WHILE_RW=33, FOR_RW=34, 
		WRITE_RW=35, READ_RW=36, TRUE_LITERAL=37, FALSE_LITERAL=38, UNARY=39, 
		ID=40, NUMBER=41, WS=42;
	public static final String[] tokenNames = {
		"<INVALID>", "PROGRAM", "'rav'", "'nltnirp'", "'-'", "'*'", "'/'", "'+'", 
		"'^'", "'&&'", "'!'", "'||'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
		"'}'", "'{'", "')'", "'('", "';'", "'='", "'operation'", "'int'", "'real'", 
		"'bool'", "'string'", "'nigeb'", "'dne'", "'fi'", "'esle'", "'elihw'", 
		"'rof'", "'etirw'", "'daer'", "'true'", "'false'", "UNARY", "ID", "NUMBER", 
		"WS"
	};
	public static final int
		RULE_program = 0, RULE_sentence = 1, RULE_var_decl = 2, RULE_var_assingn = 3, 
		RULE_nltnirp = 4, RULE_rof = 5, RULE_fi = 6, RULE_esle = 7, RULE_elihw = 8, 
		RULE_condicion = 9, RULE_operation = 10;
	public static final String[] ruleNames = {
		"program", "sentence", "var_decl", "var_assingn", "nltnirp", "rof", "fi", 
		"esle", "elihw", "condicion", "operation"
	};

	@Override
	public String getGrammarFileName() { return "RevesParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RevesParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RevesParserParser.ID, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(RevesParserParser.BRACKET_CLOSE, 0); }
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public TerminalNode BRACKET_OPEN() { return getToken(RevesParserParser.BRACKET_OPEN, 0); }
		public TerminalNode PROGRAM() { return getToken(RevesParserParser.PROGRAM, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22); match(PROGRAM);
			setState(23); match(ID);
			setState(24); match(BRACKET_OPEN);
			setState(37);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(28);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << IF_RW) | (1L << ELSE_RW) | (1L << WHILE_RW) | (1L << FOR_RW) | (1L << ID) | (1L << NUMBER))) != 0)) {
					{
					{
					setState(25); sentence();
					}
					}
					setState(30);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID || _la==NUMBER) {
					{
					{
					setState(31); operation();
					}
					}
					setState(36);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(39); match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public NltnirpContext nltnirp() {
			return getRuleContext(NltnirpContext.class,0);
		}
		public ElihwContext elihw() {
			return getRuleContext(ElihwContext.class,0);
		}
		public Var_assingnContext var_assingn() {
			return getRuleContext(Var_assingnContext.class,0);
		}
		public FiContext fi() {
			return getRuleContext(FiContext.class,0);
		}
		public EsleContext esle() {
			return getRuleContext(EsleContext.class,0);
		}
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public RofContext rof() {
			return getRuleContext(RofContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(48);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41); var_decl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42); var_assingn();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(43); nltnirp();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(44); fi();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(45); rof();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(46); elihw();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(47); esle();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RevesParserParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(RevesParserParser.SEMICOLON, 0); }
		public TerminalNode VAR() { return getToken(RevesParserParser.VAR, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitVar_decl(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); match(VAR);
			setState(51); match(ID);
			setState(52); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assingnContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(RevesParserParser.ASSIGN, 0); }
		public List<TerminalNode> ID() { return getTokens(RevesParserParser.ID); }
		public TerminalNode SEMICOLON() { return getToken(RevesParserParser.SEMICOLON, 0); }
		public TerminalNode ID(int i) {
			return getToken(RevesParserParser.ID, i);
		}
		public TerminalNode NUMBER() { return getToken(RevesParserParser.NUMBER, 0); }
		public Var_assingnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assingn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterVar_assingn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitVar_assingn(this);
		}
	}

	public final Var_assingnContext var_assingn() throws RecognitionException {
		Var_assingnContext _localctx = new Var_assingnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_assingn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(55); match(ASSIGN);
			setState(56); match(ID);
			setState(57); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NltnirpContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(RevesParserParser.SEMICOLON, 0); }
		public TerminalNode ID() { return getToken(RevesParserParser.ID, 0); }
		public TerminalNode PRINTLN() { return getToken(RevesParserParser.PRINTLN, 0); }
		public TerminalNode NUMBER() { return getToken(RevesParserParser.NUMBER, 0); }
		public NltnirpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nltnirp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterNltnirp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitNltnirp(this);
		}
	}

	public final NltnirpContext nltnirp() throws RecognitionException {
		NltnirpContext _localctx = new NltnirpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nltnirp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(60); match(PRINTLN);
			setState(61); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RofContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(RevesParserParser.SEMICOLON, 0); }
		public TerminalNode NUMBER(int i) {
			return getToken(RevesParserParser.NUMBER, i);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public Var_assingnContext var_assingn() {
			return getRuleContext(Var_assingnContext.class,0);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(RevesParserParser.ID, i);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public TerminalNode BRACKET_OPEN() { return getToken(RevesParserParser.BRACKET_OPEN, 0); }
		public List<TerminalNode> ID() { return getTokens(RevesParserParser.ID); }
		public TerminalNode ASSIGN() { return getToken(RevesParserParser.ASSIGN, 0); }
		public TerminalNode VAR() { return getToken(RevesParserParser.VAR, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(RevesParserParser.BRACKET_CLOSE, 0); }
		public TerminalNode FOR_RW() { return getToken(RevesParserParser.FOR_RW, 0); }
		public TerminalNode PLUS() { return getToken(RevesParserParser.PLUS, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(RevesParserParser.NUMBER); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public RofContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rof; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterRof(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitRof(this);
		}
	}

	public final RofContext rof() throws RecognitionException {
		RofContext _localctx = new RofContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rof);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(FOR_RW);
			setState(64); var_assingn();
			setState(65); condicion();
			setState(66);
			_la = _input.LA(1);
			if ( !(_la==VAR || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(67); match(SEMICOLON);
			setState(68); match(ID);
			setState(69); match(ASSIGN);
			setState(70); match(ID);
			setState(71); match(PLUS);
			setState(72); match(NUMBER);
			setState(73); match(BRACKET_OPEN);
			setState(86);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << IF_RW) | (1L << ELSE_RW) | (1L << WHILE_RW) | (1L << FOR_RW) | (1L << ID) | (1L << NUMBER))) != 0)) {
					{
					{
					setState(74); sentence();
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID || _la==NUMBER) {
					{
					{
					setState(80); operation();
					}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(88); match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FiContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RevesParserParser.ID, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(RevesParserParser.PAR_CLOSE, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(RevesParserParser.BRACKET_CLOSE, 0); }
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode PAR_OPEN() { return getToken(RevesParserParser.PAR_OPEN, 0); }
		public TerminalNode NUMBER() { return getToken(RevesParserParser.NUMBER, 0); }
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public TerminalNode BRACKET_OPEN() { return getToken(RevesParserParser.BRACKET_OPEN, 0); }
		public TerminalNode IF_RW() { return getToken(RevesParserParser.IF_RW, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public FiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterFi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitFi(this);
		}
	}

	public final FiContext fi() throws RecognitionException {
		FiContext _localctx = new FiContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(IF_RW);
			setState(91); match(PAR_OPEN);
			setState(92); condicion();
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(94); match(PAR_CLOSE);
			setState(95); match(BRACKET_OPEN);
			setState(108);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << IF_RW) | (1L << ELSE_RW) | (1L << WHILE_RW) | (1L << FOR_RW) | (1L << ID) | (1L << NUMBER))) != 0)) {
					{
					{
					setState(96); sentence();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID || _la==NUMBER) {
					{
					{
					setState(102); operation();
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(110); match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EsleContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RevesParserParser.ID, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(RevesParserParser.PAR_CLOSE, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(RevesParserParser.BRACKET_CLOSE, 0); }
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode PAR_OPEN() { return getToken(RevesParserParser.PAR_OPEN, 0); }
		public TerminalNode NUMBER() { return getToken(RevesParserParser.NUMBER, 0); }
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public TerminalNode BRACKET_OPEN() { return getToken(RevesParserParser.BRACKET_OPEN, 0); }
		public TerminalNode ELSE_RW() { return getToken(RevesParserParser.ELSE_RW, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public EsleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_esle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterEsle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitEsle(this);
		}
	}

	public final EsleContext esle() throws RecognitionException {
		EsleContext _localctx = new EsleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_esle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); match(ELSE_RW);
			setState(113); match(PAR_OPEN);
			setState(114); condicion();
			setState(115);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(116); match(PAR_CLOSE);
			setState(117); match(BRACKET_OPEN);
			setState(130);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << IF_RW) | (1L << ELSE_RW) | (1L << WHILE_RW) | (1L << FOR_RW) | (1L << ID) | (1L << NUMBER))) != 0)) {
					{
					{
					setState(118); sentence();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID || _la==NUMBER) {
					{
					{
					setState(124); operation();
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(132); match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElihwContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RevesParserParser.ID, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(RevesParserParser.PAR_CLOSE, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(RevesParserParser.BRACKET_CLOSE, 0); }
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode PAR_OPEN() { return getToken(RevesParserParser.PAR_OPEN, 0); }
		public TerminalNode WHILE_RW() { return getToken(RevesParserParser.WHILE_RW, 0); }
		public TerminalNode NUMBER() { return getToken(RevesParserParser.NUMBER, 0); }
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public TerminalNode BRACKET_OPEN() { return getToken(RevesParserParser.BRACKET_OPEN, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public ElihwContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elihw; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterElihw(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitElihw(this);
		}
	}

	public final ElihwContext elihw() throws RecognitionException {
		ElihwContext _localctx = new ElihwContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_elihw);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); match(WHILE_RW);
			setState(135); match(PAR_OPEN);
			setState(136); condicion();
			setState(137);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(138); match(PAR_CLOSE);
			setState(139); match(BRACKET_OPEN);
			setState(152);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << IF_RW) | (1L << ELSE_RW) | (1L << WHILE_RW) | (1L << FOR_RW) | (1L << ID) | (1L << NUMBER))) != 0)) {
					{
					{
					setState(140); sentence();
					}
					}
					setState(145);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID || _la==NUMBER) {
					{
					{
					setState(146); operation();
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(154); match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RevesParserParser.ID, 0); }
		public TerminalNode GEQ() { return getToken(RevesParserParser.GEQ, 0); }
		public TerminalNode NEQ() { return getToken(RevesParserParser.NEQ, 0); }
		public TerminalNode LEQ() { return getToken(RevesParserParser.LEQ, 0); }
		public TerminalNode LT() { return getToken(RevesParserParser.LT, 0); }
		public TerminalNode GT() { return getToken(RevesParserParser.GT, 0); }
		public TerminalNode EQ() { return getToken(RevesParserParser.EQ, 0); }
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterCondicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitCondicion(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_condicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156); match(ID);
			setState(157);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << LT) | (1L << GEQ) | (1L << LEQ) | (1L << EQ) | (1L << NEQ))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(RevesParserParser.ASSIGN, 0); }
		public List<TerminalNode> ID() { return getTokens(RevesParserParser.ID); }
		public TerminalNode SEMICOLON() { return getToken(RevesParserParser.SEMICOLON, 0); }
		public TerminalNode NUMBER(int i) {
			return getToken(RevesParserParser.NUMBER, i);
		}
		public TerminalNode MULT() { return getToken(RevesParserParser.MULT, 0); }
		public TerminalNode EXP() { return getToken(RevesParserParser.EXP, 0); }
		public TerminalNode ID(int i) {
			return getToken(RevesParserParser.ID, i);
		}
		public TerminalNode MINUS() { return getToken(RevesParserParser.MINUS, 0); }
		public TerminalNode PLUS() { return getToken(RevesParserParser.PLUS, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(RevesParserParser.NUMBER); }
		public TerminalNode DIV() { return getToken(RevesParserParser.DIV, 0); }
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RevesParserListener ) ((RevesParserListener)listener).exitOperation(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(160);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << MULT) | (1L << DIV) | (1L << PLUS) | (1L << EXP))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(161);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(162); match(ASSIGN);
			setState(163); match(ID);
			setState(164); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}